--- a/settings.json
+++ b/settings.json
@@ -3,15 +3,15 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Sanzy Bot Assistan", 
-"ownerNumber": "6281276698054@s.whatsapp.net",
-"NomorOwner":"6281276698054", 
-"NomorOwner2":"082183086471", 
-"NamaOwner":"SANZY YTゑ", 
-"NamaOwner2":"Dian Pratamaゑ", 
-"Dana":"081276698054", 
-"Pulsa":"081276698054", 
-"Gopay":"085761413369", 
+"NamaBot":"Lintang Bot", 
+"ownerNumber": "6281322577123@s.whatsapp.net",
+"NomorOwner":"6281322577123", 
+"NomorOwner2":"081322577123", 
+"NamaOwner":"LINTANG BOT", 
+"NamaOwner2":"LINTANG BOT", 
+"Dana":"081322577123", 
+"Pulsa":"081322577123", 
+"Gopay":"081322577123", 
 "kurrxdkey":"KurrXKey",
 "lolkey":"KurrApi09",
 "gcount": 20
